fixed article shift when rotated

--- a/styles/what-we-offer/services/service-article/service-article.css
+++ b/styles/what-we-offer/services/service-article/service-article.css
@@ -1,4 +1,5 @@
 .service-article {
+  width: 100%;
   height: min-content;
   display: grid;
   grid-template-columns: auto 1fr;
@@ -7,11 +8,13 @@
   transform: rotate3d(0, 1, 0, 0) translate3d(0, 0, 0);
   z-index: 5;
 }
+
 .service-title {
-  grid-column: 1 / -1;
+  grid-column: 1 /-1;
   font-size: clamp(1.5rem, 5vw, 3em);
   text-transform: uppercase;
 }
+
 .service-button {
   height: fit-content;
   margin-block: auto;
@@ -55,6 +58,13 @@
   color: var(--accent-color);
   font-size: clamp(2rem, 5vw, 3rem);
   font-weight: bold;
+}
+
+@media screen and (max-width: 960px) {
+  .service-article {
+    width: calc(100% - var(--gap-one) * 2);
+    margin-inline: auto;
+  }
 }
 
 @media screen and (max-width: 480px) {
