--- a/styles/what-we-offer/services/service-teammates/teammates.css
+++ b/styles/what-we-offer/services/service-teammates/teammates.css
@@ -20,8 +20,9 @@
 }
 
 .service-teammate {
-  height: 350px;
-  min-width: clamp(300px, 55vw, 380px);
+  min-height: 350px;
+  /* min-width: 350px; */
+  min-width: clamp(280px, 55vw, 380px);
   display: flex;
   justify-content: center;
   align-items: center;
