--- a/styles/what-we-offer/services/service.css
+++ b/styles/what-we-offer/services/service.css
@@ -114,10 +114,8 @@
   }
   .service:nth-child(even) .service-content,
   .service:nth-child(odd) .service-content {
-    width: calc(100% - var(--gap-one) * 2);
     grid-column: 1;
     grid-row: 2;
-    margin-inline: auto;
     padding-inline: 0;
   }
   .service .illustration {
